erDiagram
  SCHOOLS ||--o{ USERS : possui
  COLLECTIONS ||--o{ MATERIALS : contem
  COLLECTIONS ||--o{ QUIZZES : possui
  QUIZZES ||--o{ QUESTIONS : possui
  QUIZZES ||--o{ QUIZ_ATTEMPTS : recebe
  USERS ||--o{ QUIZ_ATTEMPTS : realiza

  SCHOOLS {
    bigint id
    string name
    string city
    string state
    string inep_code
    boolean active
  }

  USERS {
    bigint id
    string name
    string email
    string password
    string role
    bigint school_id
  }

  COLLECTIONS {
    bigint id
    string title
    string slug
    text description
    string segment
    string subject
    boolean active
  }

  MATERIALS {
    bigint id
    bigint collection_id
    string title
    string type
    text summary
    string url
    integer estimated_minutes
    boolean active
  }

  QUIZZES {
    bigint id
    bigint collection_id
    string title
    text description
    integer passing_score
    boolean active
  }

  QUESTIONS {
    bigint id
    bigint quiz_id
    text statement
    json options
    string correct_option
    integer points
  }

  QUIZ_ATTEMPTS {
    bigint id
    bigint quiz_id
    bigint user_id
    json answers
    integer score
    boolean approved
    timestamp submitted_at
  }
